# Taroting

./: .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
docs/: PERFORMANCE.md  RELEASE-NOTES-v0.5.0.md  RELEASE-NOTES-v0.6.0.md  RELEASE-NOTES-v0.6.1.md  RELEASE-NOTES-v0.6.2.md  RELEASE-NOTES-v0.7.0.md  RELEASE-NOTES-v0.7.1.md
scripts/: fetch-ffmpeg.mjs  make-fixtures.mjs  make-icon.mjs
src/: main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: main.json
src-tauri/icons/: icon.icns
src-tauri/src/: debug.rs  error.rs  hw.rs  main.rs  os.rs  paths.rs  settings.rs
src-tauri/src/cache/: mod.rs
src-tauri/src/export/: builder.rs  estimate.rs  mod.rs  model.rs
src-tauri/src/jobs/: ffmpeg.rs  mod.rs  progress.rs
src-tauri/src/media/: mod.rs  normalize.rs  playability.rs  prepare.rs  probe.rs  thumbs.rs  waveform.rs
src-tauri/src/project/: schema.rs  store.rs
src-tauri/windows/: hooks.nsh
src/core/: anim.test.ts  anim.ts  format.ts  history.test.ts  history.ts  ipc.ts  nav.ts  project.test.ts  project.ts  session.ts  shortcuts.test.ts  shortcuts.ts  store.ts  time.test.ts  time.ts  types.ts
src/dev/: autotest.ts  docs-language.test.ts  node-builtins.d.ts
src/editor/: editor.css  editor.ts
src/editor/export/: export-dialog.test.ts  export-dialog.ts  export-ipc.ts  export.css
src/home/: home.css  home.ts
src/settings/: settings.css  settings.test.ts  settings.ts
src/style/: base.css  components.css  tokens.css
src/ui/: focus.ts  icons.ts  menu.ts  toast.ts
(+26 files in other folders)
