[package]
name = "taroting"
version = "0.6.2"
description = "Ultra-lightweight, offline desktop video editor"
edition = "2021"
license = "GPL-3.0-or-later"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
tauri-plugin-single-instance = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
xxhash-rust = { version = "0.8", features = ["xxh3"] }

[profile.release]
opt-level = "s"
lto = true
strip = true
codegen-units = 1
panic = "abort"

# Keep dev iteration fast but dependencies optimized (compiled once).
[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 2
